--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">Linksy</string>
+    <string name="app_name" translatable="false">Linksy</string>
+    <string name="select_language_title">Select the translation language:</string>
+    <string name="next">Continue</string>
+    <string-array name="languages_array" translatable="false">
+        <item>English</item>
+        <item>Русский</item>
+    </string-array>
 </resources>
