fixed the logic of changing the language (added LocaleManager), improved the code

--- a/presentation/src/main/res/values-ru/strings.xml
+++ b/presentation/src/main/res/values-ru/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="select_language_title">Выберите язык перевода:</string>
     <string name="next">Продолжить</string>
+    <string name="sign_up">Регистрация</string>
+    <string name="hint_username">Ник</string>
+    <string name="hint_email">Почта</string>
+    <string name="hint_password">Пароль</string>
+    <string name="hint_confirm_password">Повторите пароль</string>
 </resources>
