--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name" translatable="false">Linksy</string>
     <string name="select_language_title">Select the translation language:</string>
     <string name="next">Continue</string>
+    <string name="sign_up">Sign up</string>
+    <string name="hint_username">Username</string>
+    <string name="hint_email">E-mail</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_confirm_password">Confirm password</string>
     <string-array name="languages_array" translatable="false">
         <item>English</item>
         <item>Русский</item>
