--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="sign_up_button">Sign up</string>
     <string name="login_button">Login</string>
     <string name="question_have_an_account">Already have an account?</string>
+    <string name="login_title">Login</string>
+    <string name="checkbox_remember_me">Remember me</string>
+    <string name="link_forgot_password">Forgot password?</string>
+    <string name="button_create_account">Create account</string>
+
+
 </resources>
