implemented and  added a custom progressbar,made minor changes to the UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="confirmation_code_sent">The confirmation code has been sent to:</string>
     <string name="send_button">Send</string>
     <string name="invalid_confirmation_code">Invalid confirmation code</string>
+    <string name="failed_connection">Server connection error</string>
 
 
 </resources>
