--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,4 +23,5 @@
     <string name="confirmation_code_sent">Код подтверждения отправен на:</string>
     <string name="send_button">Отправить</string>
     <string name="invalid_confirmation_code">Неверный код подтверждения</string>
+    <string name="failed_connection">Ошибка подключения к серверу</string>
 </resources>
