--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,4 +27,5 @@
     <string name="didn_t_receive_the_code">Не пришёл код?</string>
     <string name="cancel">Отменить</string>
     <string name="resend">Отправить повторно</string>
+    <string name="user_not_found">Пользователь не найден</string>
 </resources>
