--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -32,4 +32,5 @@
     <string name="new_password">Новый пароль</string>
     <string name="change_button">Поменять</string>
     <string name="invalid_code_length">Введите пятизначный код</string>
+    <string name="password_update">Пароль изменён</string>
 </resources>
