Created a User Activity and redirected to Login Fragment upon successful registration with the output of the corresponding notification

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -33,4 +33,5 @@
     <string name="change_button">Поменять</string>
     <string name="invalid_code_length">Введите пятизначный код</string>
     <string name="password_update">Пароль изменён</string>
+    <string name="registration_successful">Регистрация прошла успешно!</string>
 </resources>
