--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,5 @@
     <string name="change_button">Change</string>
     <string name="invalid_code_length">Enter a five-digit code</string>
     <string name="password_update">Password updated</string>
-
+    <string name="registration_successful">Registration successful!</string>
 </resources>
