--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="chats">Chats</string>
     <string name="friends">Friends</string>
     <string name="settings">Settings</string>
+    <string name="feed">Feed</string>
 </resources>
