slightly changed the design in the registration activity, also removed the ActionBar everywhere.2 tabs have been added to the profile tab (View and edit your posts and photos).Added the ability to upload an avatar, but so far without sending it to the server

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -40,4 +40,6 @@
     <string name="friends">Друзья</string>
     <string name="settings">Настройки</string>
     <string name="feed">Лента</string>
+    <string name="posts">Посты</string>
+    <string name="photos">Фото</string>
 </resources>
