--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,6 @@
     <string name="friends">Friends</string>
     <string name="settings">Settings</string>
     <string name="feed">Feed</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="posts">Posts</string>
+    <string name="photos">Photo</string>
 </resources>
