--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,6 +6,7 @@
     <string name="hint_email">Почта</string>
     <string name="hint_password">Пароль</string>
     <string name="hint_confirm_password">Повторите пароль</string>
+    <string name="hint_birthday">Дата рождения</string>
     <string name="sign_up_button">Зарегестрироваться</string>
     <string name="login_button">Войти</string>
     <string name="question_have_an_account">Уже зарегестрированы?</string>
