--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="next">Continue</string>
     <string name="sign_up_title">Sign up</string>
     <string name="hint_username">Username</string>
-    <string name="hint_email">E-mail</string>
+    <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
     <string name="hint_confirm_password">Confirm password</string>
+    <string name="hint_birthday">Birthday</string>
     <string-array name="languages_array" translatable="false">
         <item>English</item>
         <item>Русский</item>
