--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -43,7 +43,7 @@
     <string name="feed">Лента</string>
     <string name="posts">Посты</string>
     <string name="photos">Фото</string>
-    <string name="profile_settings">Настройки профиля</string>
+    <string name="profile_settings">Профиль</string>
     <string name="сonfidentiality">Конфиденциальность</string>
     <string name="blacklist">Черный список</string>
     <string name="app_settings">Приложение</string>
@@ -56,4 +56,5 @@
     <string name="change_password_title">Изменение пароля</string>
     <string name="hint_old_password">Старый пароль</string>
     <string name="hint_link">Ссылка</string>
+    <string name="error_invalid_token">Неверный или истёкший токен</string>
 </resources>
