--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,5 @@
     <string name="change_password_title">Change password</string>
     <string name="hint_old_password">Old password</string>
     <string name="hint_link">Link</string>
-
+    <string name="error_invalid_token">Invalid or expired token</string>
 </resources>
