added the ability to receive and save birth data

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -57,4 +57,5 @@
     <string name="hint_old_password">Старый пароль</string>
     <string name="hint_link">Ссылка</string>
     <string name="error_invalid_token">Неверный или истёкший токен</string>
+    <string name="indicate_date">Укажите дату</string>
 </resources>
