--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="hint_old_password">Old password</string>
     <string name="hint_link">Link</string>
     <string name="error_invalid_token">Invalid or expired token</string>
+    <string name="indicate_date">Indicate the date</string>
 </resources>
