--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -61,4 +61,5 @@
     <string name="link_is_already_taken">"Эта ссылка уже занята"</string>
     <string name="upload">Загрузить</string>
     <string name="delete">Удалить</string>
+    <string name="error_password_short">Введите хотя бы один символ</string>
 </resources>
