--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="link_is_already_taken">This link is already taken</string>
     <string name="upload">Upload</string>
     <string name="delete">Delete</string>
+    <string name="error_password_short">Enter at least one character</string>
 </resources>
