added the ability to change the password in the profile settings

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -62,4 +62,6 @@
     <string name="upload">Загрузить</string>
     <string name="delete">Удалить</string>
     <string name="error_password_short">Введите хотя бы один символ</string>
+    <string name="change">Изменить</string>
+    <string name="wrong_password">Неверный пароль</string>
 </resources>
