--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -64,4 +64,6 @@
     <string name="error_password_short">Введите хотя бы один символ</string>
     <string name="change">Изменить</string>
     <string name="wrong_password">Неверный пароль</string>
+    <string name="new_post">Новый пароль</string>
+    <string name="publish">Опубликовать</string>
 </resources>
