added the ability to delete a post

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -66,4 +66,9 @@
     <string name="wrong_password">Неверный пароль</string>
     <string name="new_post">Новый пароль</string>
     <string name="publish">Опубликовать</string>
+    <string name="edit">Редактировать</string>
+    <string name="empty_message">Пока ничего нет. \nДобавьте что-нибудь интересное!</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
+    <string name="delete_post_title">Удалить пост?</string>
 </resources>
