--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -70,5 +70,6 @@
     <string name="empty_message">Пока ничего нет. \nДобавьте что-нибудь интересное!</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
-    <string name="delete_post_title">Удалить пост?</string>
+    <string name="delete_post_title">Удаление поста</string>
+    <string name="delete_post_confirm_text">Вы уверены, что хотите удалить пост?</string>
 </resources>
