Added the ability to view an enlarged image (as well as zoom in using PhotoView), as well as launch videos in a separate window (including a separate button for fullscreen mode) and fixed bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,7 @@
     <string name="no">No</string>
     <string name="delete_post_title">Deleting a post</string>
     <string name="delete_post_confirm_text">Are you sure you want to delete the post?</string>
+    <string name="title_activity_full_screen_video">FullScreenVideoActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
