--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,7 @@
     <string name="settings">Settings</string>
     <string name="feed">Feed</string>
     <string name="posts">Posts</string>
-    <string name="photos">Photo</string>
+    <string name="moments">Moments</string>
     <string name="profile_settings">Profile</string>
     <string name="app_settings">App</string>
     <string name="сonfidentiality">Confidentiality</string>
@@ -77,7 +77,8 @@
     <string name="no">No</string>
     <string name="delete_post_title">Deleting a post</string>
     <string name="delete_post_confirm_text">Are you sure you want to delete the post?</string>
-    <string name="title_activity_full_screen_video">FullScreenVideoActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="new_moment">New moment</string>
+    <string name="write_something">Write something..</string>
+    <string name="or">or</string>
+
 </resources>
