--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="profile">Profile</string>
     <string name="channels">Channels</string>
     <string name="chats">Chats</string>
-    <string name="friends">Friends</string>
+    <string name="people">People</string>
     <string name="settings">Settings</string>
     <string name="feed">Feed</string>
     <string name="posts">Posts</string>
@@ -83,6 +83,9 @@
     <string name="write_something">Write something..</string>
     <string name="or">or</string>
     <string name="moment_hint">Please note: Videos will be trimmed to 45 seconds, and audio will be limited to 20 seconds if only an image is added.</string>
-
+    <string name="user_search_hint">Start typing "@" if you want to find the user by following the link.</string>
+    <string name="search">Search</string>
+    <string name="subscriptions">Subscriptions</string>
+    <string name="subscribers">Subscribers</string>
 
 </resources>
