added the display of user pages with all the data, improved the project structure

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -82,4 +82,6 @@
     <string name="search">Поиск</string>
     <string name="subscriptions">Подписки</string>
     <string name="subscribers">Подписчики</string>
+    <string name="message">Сообщение</string>
+    <string name="subscribe">Подписаться</string>
 </resources>
