--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,9 @@
     <string name="search">Search</string>
     <string name="subscriptions">Subscriptions</string>
     <string name="subscribers">Subscribers</string>
+    <string name="message">Message</string>
+    <string name="subscribe">Subscribe</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
