qr code generation has been added and a built-in scanner has been implemented when searching for users.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -84,4 +84,5 @@
     <string name="subscribers">Подписчики</string>
     <string name="message">Сообщение</string>
     <string name="subscribe">Подписаться</string>
+    <string name="camera_is_not_allowed">Камера не разрешена</string>
 </resources>
