--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,7 +89,6 @@
     <string name="subscribers">Subscribers</string>
     <string name="message">Message</string>
     <string name="subscribe">Subscribe</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="camera_is_not_allowed">Camera is not allowed</string>
 
 </resources>
