Added the ability to view your own and other people's subscribers and subscriptions, implemented button listeners in the user profile.Added error display when navigating to a non-existent page.Fixed bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,8 @@
     <string name="subscribers">Subscribers</string>
     <string name="message">Message</string>
     <string name="subscribe">Subscribe</string>
+    <string name="unsubscribe">Unsubscribe</string>
     <string name="camera_is_not_allowed">Camera is not allowed</string>
-
+    <string name="subscribed">You have subscribed!</string>
+    <string name="unsubscribed">You have unsubscribed!</string>
 </resources>
