--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -85,4 +85,7 @@
     <string name="message">Сообщение</string>
     <string name="subscribe">Подписаться</string>
     <string name="camera_is_not_allowed">Камера не разрешена</string>
+    <string name="unsubscribe">Отписаться</string>
+    <string name="subscribed">Вы подписались!</string>
+    <string name="unsubscribed">Вы отписались!</string>
 </resources>
