--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,6 @@
     <string name="camera_is_not_allowed">Camera is not allowed</string>
     <string name="subscribed">You have subscribed!</string>
     <string name="unsubscribed">You have unsubscribed!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
