added the ability to create groups (chats of several participants), and when you click on messages in the group, the number of participants is displayed and you can now view their profiles.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -88,4 +88,11 @@
     <string name="unsubscribe">Отписаться</string>
     <string name="subscribed">Вы подписались!</string>
     <string name="unsubscribed">Вы отписались!</string>
+    <string name="create_group">Cоздать группу</string>
+    <string name="name">Название</string>
+    <string name="create">Создать</string>
+    <string name="add_participants">Добавьте участников</string>
+    <string name="empty_field">Поле не может быть пустым</string>
+    <string name="chat_members">Участники чата</string>
+    <string name="members">участника</string>
 </resources>
