--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,11 @@
     <string name="camera_is_not_allowed">Camera is not allowed</string>
     <string name="subscribed">You have subscribed!</string>
     <string name="unsubscribed">You have unsubscribed!</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create_group">Create group</string>
+    <string name="name">Name</string>
+    <string name="create">Create</string>
+    <string name="add_participants">Add participants</string>
+    <string name="empty_field">The field cannot be empty</string>
+    <string name="chat_members">Chat members</string>
+    <string name="members">members</string>
 </resources>
