--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,7 @@
     <string name="or">or</string>
     <string name="moment_hint">Please note: Videos will be trimmed to 45 seconds, and audio will be limited to 20 seconds if only an image is added.</string>
     <string name="user_search_hint">Start typing "@" if you want to find the user by following the link.</string>
+    <string name="channel_search_hint">Start typing "@" if you want to find the channel by following the link.</string>
     <string name="search">Search</string>
     <string name="subscriptions">Subscriptions</string>
     <string name="subscribers">Subscribers</string>
