added the ability to view channels.QR codes can now be generated in other users' profiles and in the channels themselves.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -103,4 +103,5 @@
         <item>Публичный</item>
         <item>Закрытый</item>
     </string-array>
+    <string name="channel_not_found">Канал не найден</string>
 </resources>
