--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,5 @@
     <string name="create_channel">Create channel</string>
     <string name="description">Description</string>
     <string name="type">Type</string>
-
+    <string name="channel_not_found">The channel was not found</string>
 </resources>
