added the ability to add polls to channel posts.I have configured the display of private and public channels.Created UseCases for actions inside channels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,4 +109,5 @@
     <string name="description">Description</string>
     <string name="type">Type</string>
     <string name="channel_not_found">The channel was not found</string>
+    <string name="titile">Titile</string>
 </resources>
