added the ability to vote in polls, and also configured the display of posts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,6 @@
     <string name="type">Type</string>
     <string name="channel_not_found">The channel was not found</string>
     <string name="titile">Titile</string>
+    <string name="submit_request">Submit request</string>
+    <string name="rating">Rating</string>
 </resources>
