added search by link and name, fixed errors

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -111,4 +111,6 @@
     <string name="delete_request">Отменить заявку</string>
     <string name="poll">Опрос</string>
     <string name="add">Добавить</string>
+    <string name="search_results">Результаты поиска</string>
+    <string name="your_subscriptions">Ваши подписки</string>
 </resources>
