--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,7 +113,9 @@
     <string name="submit_request">Submit request</string>
     <string name="rating">Rating</string>
     <string name="subscription_request">subscription \nrequest</string>
-    <string name="delete_request">delete request</string>
+    <string name="delete_request">Delete request</string>
     <string name="poll">Poll</string>
     <string name="add">Add</string>
+    <string name="search_results">Search Results</string>
+    <string name="your_subscriptions">Your subscriptions</string>
 </resources>
