Added the ability to leave and view comments, as well as respond to them.You can also now like and delete user posts.Fixed bugs.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -113,4 +113,8 @@
     <string name="add">Добавить</string>
     <string name="search_results">Результаты поиска</string>
     <string name="your_subscriptions">Ваши подписки</string>
+    <string name="reply">Ответить</string>
+    <string name="view_responses">посмотреть ответы</string>
+    <string name="comments">Комментарии</string>
+    <string name="reply_to">ответить: </string>
 </resources>
