--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,8 @@
     <string name="add">Add</string>
     <string name="search_results">Search Results</string>
     <string name="your_subscriptions">Your subscriptions</string>
+    <string name="reply">Reply</string>
+    <string name="view_responses">view responses</string>
+    <string name="comments">Comments</string>
+    <string name="reply_to">reply to: </string>
 </resources>
