I implemented adding and removing from the blacklist on the page using the menu, and the settings also now display a list of all users on the blacklist with the ability to edit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,7 @@
     <string name="light">light</string>
     <string name="dark">dark</string>
     <string name="apply">Apply</string>
+    <string name="add_to_blacklist">Add to blacklist</string>
+    <string name="remove_blacklist">Remove from the blacklist</string>
+    <string name="blackList_info">You have been added to the blacklist!</string>
 </resources>
