--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -122,4 +122,7 @@
     <string name="light">светлая</string>
     <string name="dark">темная</string>
     <string name="apply">Применить</string>
+    <string name="add_to_blacklist">Добавить в чёрный список</string>
+    <string name="remove_blacklist">Убрать из чёрного списка</string>
+    <string name="blackList_info">Вы были добавлены в чёрный список!</string>
 </resources>
